--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -99,7 +99,7 @@
 		<a href="{{pomspath}}/inflight_files?campaign_id={{c.campaign_id}}"><i class="external plane icon" data-content="In-Flight File Information" data-variation="basic"></i>Inflight Files</a>
               </div>
               <div class=item>
-		<a href="{{pomspath}}/actual_pending_files?campaign_id={{c.campaign_id}}"><i class="external spinner icon" data-content="Pending File Information" data-variation="basic"></i>Pending Files for Recent Jobs</a>
+		<a href="{{pomspath}}/actual_pending_files?count_or_list=c&campaign_id={{c.campaign_id}}"><i class="external spinner icon" data-content="Pending File Information" data-variation="basic"></i>Pending Files for Recent Jobs</a>
               </div>
               <div class=item>
 		<a href="{{pomspath}}/schedule_launch?campaign_id={{c.campaign_id}}"><i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches</a>
