--- a/webservice/templates/inflight_files.html
+++ b/webservice/templates/inflight_files.html
@@ -29,7 +29,7 @@
 
 {%block content %}
 
-Pending files for:
+In-Flight files for:
 
      {% if campaign_id is not none %}
         Campaign {{c.name}}
