messed with merging dashboard, didn't like it

--- a/webservice/templates/campaign_launch_schedule.html
+++ b/webservice/templates/campaign_launch_schedule.html
@@ -45,4 +45,12 @@
    <input type="submit" name="delete" value="delete">
  </form>
   </div>
+
+   <h3>Recent Launch Outputs </h3>
+   <ul>
+   {%for f in launch_flist%}
+      <li>
+      <a href="list_launch_file?campaign_id={{campaign_id}}&fname={{f}}">{{f}}</a>
+   {%endfor%}
+   </ul>
 {%endblock%}
