--- a/webservice/templates/campaign_launch_schedule.html
+++ b/webservice/templates/campaign_launch_schedule.html
@@ -24,27 +24,43 @@
 
 
 {%block content%}
-  <div class="ui">
+  <h4>Current Crontab Entry</h4>
+  <div class="ui raised segment">
     {{job}}
-  <form action="update_launch_schedule" method="GET">
-  <input type="hidden" name="campaign_id" value="{{campaign_id}}">
-  Minutes(s) of the hour:
-  <input name="minlist" width=2 value="{{job.minutes if job.minutes else '*'}}">
-  <br>
-  Hour(s) of day:
-  <input name="hourlist" width=2 value="{{job.hours if job.hours else '*'}}">
-  <br>
-  Day(s) of week:
-  <input name="dowlist" width=2 value="{{job.day if job.day else '*'}}">
-  <br>
-
-  Day(s) of Month:
-  <input name="domlist" width=2 value="{{job.dom if job.dom else '*'}}">
-  <br>
-   <input type="submit" name="submit" value="submit">
-   <input type="submit" name="delete" value="delete">
- </form>
   </div>
+  <h4>Update Entry form</h4>
+  <form class="ui form raised segment" action="update_launch_schedule" method="GET">
+
+   <input type="hidden" name="campaign_id" value="{{campaign_id}}">
+
+   <div class=field>
+    <label>  Minutes(s) of the hour:</label>
+    <input type="text" name="minlist" value="{{job.minutes if job.minutes else '*'}}">
+  </div>
+  <div class=field>
+    <label>Hour(s) of day:</label>
+    <input type="text" name="hourlist" width=2 value="{{job.hours if job.hours else '*'}}">
+  </div>
+  <div class="grouped fields">
+    <label>Day(s) of week: </label> <p>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="*" type="hidden" {%if job.dow == '*' %}checked{%endif%}><label>Any</label></div>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="sun" type="hidden" {%if 'sun' in job.dow|string %}checked{%endif%}><label>Sunday</label></div>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="mon" type="hidden" {%if 'mon' in job.dow|string %}checked{%endif%}><label>Monday</label></div>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="tue" type="hidden" {%if 'tue' in job.dow|string %}checked{%endif%}><label>Tuseday</label></div>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="wed" type="hidden" {%if 'wed' in job.dow|string %}checked{%endif%} {%if '0' in job.dow %}checked{%endif%}><label>Wednesday</label></div>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="thu" type="hidden" {%if 'thu' in job.dow|string %}checked{%endif%}><label>Thursday</label></div>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="fri" type="hidden" {%if 'fri' in job.dow|string %}checked{%endif%}><label>Friday</label></div>
+    <div class="ui checkbox"><input type="checkbox" name="dowlist" value="sat" type="hidden" {%if 'sat' in job.dow|string %}checked{%endif%}><label>Saturday</label></div>
+    <p>
+  </div>
+  <div class=field>
+    <label>Day(s) of Month:</label>
+    <input name="domlist" width=2 value="{{job.dom if job.dom else '*'}}">
+  </div>
+  <button class="ui button" type="submit" name="submit" value="submit">Submit</button>
+  <button class="ui button" type="submit" name="delete" value="delete">Delete</button>
+ </form>
+</div>
 
    <h3>Recent Launch Outputs </h3>
    <ul>
