Key/value modal now has scrollbars.

--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -398,6 +398,7 @@ function ep_build_table_body() {
     row +=     '</tr>'
     $("#ep_tbody").append(row);
   }		
+  $("#edit_param_modal").modal('refresh');
 }
 
 function rebuild_ep_parms() {
