--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -145,7 +145,7 @@
                         Failed_By Exit Code and Campaign Name (Last Day)
                     </a>
                     <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=7&f=user_exe_exit_code&f=name">
-                        Failed_By Exit Code and Campaign Nmae (Last Week)
+                        Failed_By Exit Code and Campaign Name (Last Week)
                     </a>
                     <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=node_name">
                         Failed_By Exit Code and Node Name (Last Day)
