--- a/webservice/templates/job_grid.html
+++ b/webservice/templates/job_grid.html
@@ -51,7 +51,7 @@
 
               <div class='row' style='margin:0px 0px; padding:0px 0px;'>
                  <div class='mwm_label' style='text-align: right; width: 14%; float:left; padding: 5px 5px; border-right: 1px solid black; '>
-                    {{id}}{{blob.extramap.id}}
+                    {{id}}{{blob.extramap[id]}}
                   </div>
                   <div clas='mwm_rowdata'  style='position: relative; width: 85%; float:left; clear: right; border-right: 1px solid black; border-left: 1px solid black; padding: 5px 0px'>
 
