Reduced button size to save space.

--- a/webservice/templates/experiment_edit.html
+++ b/webservice/templates/experiment_edit.html
@@ -93,7 +93,7 @@ function pop_experiment_users_modal(experiment) {
 	<td>{{row.name}}</td>
 	<td>
 	  <div class="ui labeled button" onclick="pop_experiment_users_modal('{{row.name}}')">
-	    <div class="ui teal button">
+	    <div class="ui teal mini button">
 	      <i class="user icon"></i>
 	      <i class="user icon"></i>
 	    </div>
