Defaulting paramenter fields to []

--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -143,7 +143,7 @@
       <div class="one field">
 	<div class="field">
           <label>Parameter Overrides<i class="large edit link blue icon" id="edit_param_modal_btn"></i></label>
-          <textarea rows="2" id="ae_param_overrides_text" disabled></textarea>
+          <textarea rows="2" id="ae_param_overrides_text" disabled>[]</textarea>
 	</div>
       </div>
       <h4 class="ui horizontal divider">Launch Template</h4>
@@ -224,7 +224,7 @@
       <input type="hidden" name="action" id="ae_definition_action" value="add">
       <input type="hidden" id="ae_experimenter_id" name="experimenter_id" value="{{current_experimenter.experimenter_id}}">
       <input type="hidden" id="ae_campaign_id" name="ae_campaign_id" value="0">
-      <input type="hidden" id="ae_param_overrides" name="ae_param_overrides" value="">
+      <input type="hidden" id="ae_param_overrides" name="ae_param_overrides" value="[]">
     </form>
   </div>
   <div class="ui hidden divider"></div>
