--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -148,7 +148,7 @@
       <div class="one field">
 	<div class="field">
           <label>Definition Parameters <i class="large edit link blue icon" id="edit_param_modal_btn"></i></label>
-          <textarea id="ae_definition_parameters_text" disabled></textarea>
+          <textarea id="ae_definition_parameters_text" disabled>[]</textarea>
 	</div>
       </div>
       <div class="actions">
@@ -159,7 +159,7 @@
       <input type="hidden" name="action" id="ae_definition_action" value="add">
       <input type="hidden" id="ae_experimenter_id" name="experimenter_id" value="{{current_experimenter.experimenter_id}}">
       <input type="hidden" id="ae_campaign_definition_id" name="ae_campaign_definition_id" value="0">
-      <input type="hidden" id="ae_definition_parameters" name="ae_definition_parameters" value="">
+      <input type="hidden" id="ae_definition_parameters" name="ae_definition_parameters" value="[]">
     </form>
   </div>
   <div class="ui hidden divider"></div>
