more tag goodies and now with auto complete

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -38,6 +38,12 @@
             <script src='{{pomspath}}/static/js/jquery-ui.js'></script>
             <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/datepicker.css">
 
+
+<link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/search.min.css">
+<script src='{{pomspath}}/static/js/index.js'></script>
+<script src='{{pomspath}}/static/js/search.min.js'></script>
+
+
     </head>
     
     
