--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -29,22 +29,32 @@
 
 {%block content%}
 
+<style>
+.ui.search .prompt{border-radius:0.28571429rem}
+</style>
+
 
 
 <script>
 $( document ).ready(function() {
 
+
+
+
+
     function do_delete(item)
     {
         var c_id = item.id.split("_")[0];
         var t_id = item.id.split("_")[1];
-        var clicked_id = "#"+item.id
+        var clicked_id = "#"+item.id;
+        var experiment = "{{campaign.experiment}}";
 
-        $.post('delete_campaigns_tags', {campaign_id: c_id, tag_id: t_id, experiment: {{campaign.experiment}}}, function(data) {
+        $.post('delete_campaigns_tags', {campaign_id: c_id, tag_id: t_id, experiment: experiment}, function(data) {
             if(data.msg == "OK")
             {
                 $('#response').html(data.msg);
-                $(clicked_id).remove();
+                $(clicked_id).remove();  //removes the trash can
+                $(clicked_id+"_").remove();  //removes the tag
 
             }
             else
@@ -56,14 +66,21 @@ $( document ).ready(function() {
 
 
 
-    function add_dblclick_handler()
+    function add_click_handler()
     {
-        $( ".poms_tag" ).dblclick(function() {
-            do_delete(this);
+          $( ".poms_tag" ).off("click").on("click", function() {
+            if (confirm("Are you sure you want to delete this item?") == true)
+            {
+               do_delete(this);
+            }
+            else
+            {
+              return;
+            }
         });
     }
 
-    add_dblclick_handler();
+    add_click_handler();
 
 
 
@@ -85,9 +102,12 @@ $( document ).ready(function() {
                 var campaigns_tags_composite_key = data.campaign_id.toString() + "_" + data.tag_id.toString();
                 $('#response').html(data.msg);
 
-                var new_tag = "<a href=\'{{pomspath}}/search_tags?q=" + data.tag_name + "\' class=\'ui blue tag label poms_tag\'id=" + campaigns_tags_composite_key + ">" + data.tag_name + "</a>"
+                var new_tag = "<a href=\'{{pomspath}}/search_tags?q=" + data.tag_name + "\' class=\'ui blue tag label\'id=" + campaigns_tags_composite_key + "_>" + data.tag_name + "</a>";
+                var new_trash_can = "<i class=\'trash outline icon link poms_tag\' id=" + campaigns_tags_composite_key + "></i>";
+                $('#tag_container').append(new_trash_can);
                 $('#tag_container').append(new_tag);
-                add_dblclick_handler();
+                $('#tag_field').val("");
+                add_click_handler();
             }
             else
             {
@@ -97,7 +117,21 @@ $( document ).ready(function() {
         });
     });
 
+
+    $('#tag_field').keypress(function(event){
+        if(event.keyCode == 13)
+        {
+            $('#add_button').click();
+            $('#tag_field').val("");
+        }
+    });
+
+
+
+
 });
+
+
 </script>
 
 
@@ -123,29 +157,64 @@ $( document ).ready(function() {
 
     <h3>Tags</h3>
 
-    <div class="ui left icon input">
-      <input type="text" id="tag_field" name="tag" placeholder="Enter tag">
-      <i class="tag icon"></i>
+    <div class="ui search">
+        <div class="ui left icon input">
+           <input type="text" id="tag_field" name="tag" placeholder="Enter tag" class="prompt">
+           <i class="tag icon"></i>
+        </div>
+
+        <button class="ui icon small blue button" id="add_button">
+          <i class="plus icon"></i>
+        </button>
+        <div id="response" style="display:inline; vertical-align: bottom; font-style: italic;"></div>
+
+        <div class="results"></div>
     </div>
 
-    <button class="ui icon small blue button" id="add_button">
-      <i class="plus icon"></i>
-    </button>
-    <div id="response" style="display:inline; vertical-align: bottom; font-style: italic;"></div>
 
     <br/>
     <br/>
-
 
     <div id="tag_container">
     {% for tag in tags %}
-        <a href="{{pomspath}}/search_tags?q={{tag.tag_name}}" class="ui blue tag label poms_tag" id="{{campaign.campaign_id}}_{{tag.tag_id}}">{{tag.tag_name}}</a>
+        <i class="trash outline icon link poms_tag" id="{{campaign.campaign_id}}_{{tag.tag_id}}"></i>
+        <a href="{{pomspath}}/search_tags?q={{tag.tag_name}}" class="ui blue tag label" id="{{campaign.campaign_id}}_{{tag.tag_id}}_">{{tag.tag_name}}</a>
+    <!--    <br/></br>   -->
     {% endfor %}
     </div>
 
 
-
   </div>
+
+
+
+
+
+
+
+
+
+<script>
+var protocol = window.location.protocol;
+var hostname = window.location.hostname;
+var appname = window.location.pathname.split("/")[1];
+var querypath = protocol + "//" + hostname + "/" + appname + "/auto_complete_tags_search";
+
+
+var experiment = "{{campaign.experiment}}";
+$('.ui.search')
+  .search({
+    apiSettings: {
+      url: querypath + "?q={query}&experiment=" + experiment
+    },
+    fields:{
+      title: 'tag_name'
+    },
+    //minCharacters : 3
+  });
+</script>
+
+
 
 
 
