added dcache scratch write rate...

--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -87,22 +87,35 @@
              <i class="dropdown icon"></i>
              <div class=menu>
               <div class=item>
-                <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram</a>
+               <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"
+ >
+                   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram
+               </a>
               </div>
               <div class=item>
-                <a href="{{pomspath}}/campaign_sheet?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet</a>
+               <a href="{{pomspath}}/campaign_sheet?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}">
+                <i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet
+               </a>
               </div>
               <div class=item>
-                <a href="{{pomspath}}/campaign_time_bars?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}"><i class="external tasks icon" data-content="Tasks in Campaign Time Bars" data-variation="basic"></i>Task Time Bars</a>
+              <a href="{{pomspath}}/campaign_time_bars?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}">
+                <i class="external tasks icon" data-content="Tasks in Campaign Time Bars" data-variation="basic"></i>Task Time Bars
+              </a>
               </div>
               <div class=item>
-		<a href="{{pomspath}}/inflight_files?campaign_id={{c.campaign_id}}"><i class="external plane icon" data-content="In-Flight File Information" data-variation="basic"></i>Inflight Files</a>
+	      <a href="{{pomspath}}/inflight_files?campaign_id={{c.campaign_id}}">
+                <i class="external plane icon" data-content="In-Flight File Information" data-variation="basic"></i>Inflight Files
+              </a>
               </div>
               <div class=item>
-		<a href="{{pomspath}}/actual_pending_files?count_or_list=c&campaign_id={{c.campaign_id}}"><i class="external spinner icon" data-content="Pending File Information" data-variation="basic"></i>Pending Files for Recent Jobs</a>
+	      <a href="{{pomspath}}/actual_pending_files?count_or_list=c&campaign_id={{c.campaign_id}}">
+                <i class="external spinner icon" data-content="Pending File Information" data-variation="basic"></i>Pending Files for Recent Jobs
+              </a>
               </div>
               <div class=item>
-		<a href="{{pomspath}}/schedule_launch?campaign_id={{c.campaign_id}}"><i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches</a>
+	      <a href="{{pomspath}}/schedule_launch?campaign_id={{c.campaign_id}}">
+                 <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches
+              </a>
               </div>
               <div class=item>
 		<a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}"><i class="external info circle icon" data-content="Campaign Information" data-variation="basic"></i>Campaign Information</a>
