launch holds, and dimension fixup

--- a/webservice/templates/service_statuses.html
+++ b/webservice/templates/service_statuses.html
@@ -31,6 +31,11 @@
 
 
 {%block content%}
+<div class="ui segment raised">
+Job launches: {{launches}} 
+ <a href="set_job_launches?hold=allowed"><button>Allow</button></a>
+ <a href="set_job_launches?hold=hold"><button>Hold</button></a>
+</div>
 	   {{services}} 
 <h3> Key:</h3>
 <div class="ui green label">
