fixes job table filtering

--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -92,9 +92,9 @@ $(function() {
                 </div>
             </div>
             <div class="field">
-                <label>Task Definition ID</label>
+                <label>Campaign Definition ID</label>
                 <div class="ui input">
-                    <input type="text" name="task_def_id" value="{{filtered_fields.get("task_def_id", "")}}" placeholder="">
+                    <input type="text" name="campaign_def_id" value="{{filtered_fields.get("campaign_def_id", "")}}" placeholder="">
                 </div>
             </div>
             <div class="field">
