minor cleanups, Task=>Submission text changes

--- a/webservice/templates/campaign_bars.html
+++ b/webservice/templates/campaign_bars.html
@@ -38,7 +38,7 @@
 
 {%block content%}
 
-   <h2 class="ui row dividing header">{{name}} Tasks </h2>
+   <h2 class="ui row dividing header">{{name}} Submissions </h2>
 
    <div class="ui grid">
    <div class="ui row">
