--- a/webservice/templates/inflight_files.html
+++ b/webservice/templates/inflight_files.html
@@ -34,7 +34,7 @@ In-Flight files for:
      {% if campaign_id is not none %}
         Campaign {{c.name}}
      {% elif task_id is not none %}
-       Task(s) {{jjid}}
+       Submissions(s) {{jjid}}
      {% elif job_id is not none %}
        Job(s) {{jjid}}
      {% endif %}
