--- a/webservice/templates/job_file_contents.html
+++ b/webservice/templates/job_file_contents.html
@@ -10,7 +10,7 @@
   <div class="divider"> / </div>
   <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_task_jobs?task_id={{task_id}}&tmin={{tmin}}" class="section">Jobs in task {{task_id}}</a>
+  <a href="{{pomspath}}/show_task_jobs?task_id={{task_id}}&tmin={{tmin}}" class="section">Jobs in Submission {{task_id}}</a>
   <div class="divider"> / </div>
   <a href= "{{pomspath}}/triage_job?job_id={{job_id}}&tmin={{tmin}}" class="section">Triage job {{job_id}}</a>
   <div class="divider"> / </div>
