--- a/webservice/templates/job_grid.html
+++ b/webservice/templates/job_grid.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS:Jobs in Task {{taskid}} </title>
+    <title>POMS:Jobs in Submission {{taskid}} </title>
 {%endblock%}
 
 
@@ -13,7 +13,7 @@
   <div class="divider"> / </div>
   <a href="{{pomspath}}/campaign_time_bars?campaign_id={{campaign_id}}" class="section">Campaign {{cname}}</a>
   <div class="divider"> / </div>
-  <div class="section">Jobs in task {{taskid}}</div>
+  <div class="section">Jobs in submission {{taskid}}</div>
 </div>
 {%endblock%}
 
