--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -12,7 +12,7 @@
   <div class="divider"> / </div>
   <a href="{{pomspath}}/campaign_time_bars/campaign_id=?{{job_info.Campaign.campaign_id}}" class="section">Campaign {{job_info.Campaign.name}}</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_task_jobs?task_id={{job_info.Job.task_id}}&tmin={{tmin}}" class="section">Jobs in task {{task_jobsub_jobid}}</a>
+  <a href="{{pomspath}}/show_task_jobs?task_id={{job_info.Job.task_id}}&tmin={{tmin}}" class="section">Jobs in Submission {{task_jobsub_jobid}}</a>
   <div class="divider"> / </div>
   <div class="section">Triage job {{job_info.Job.jobsub_job_id}}</div>
 </div>
