--- a/webservice/templates/actual_pending_files.html
+++ b/webservice/templates/actual_pending_files.html
@@ -39,7 +39,7 @@ Pending files for:
      {% if campaign_id is not none %}
         Campaign {{c.name}}
      {% elif task_id is not none %}
-       Task(s) {{jjid}}
+       Submissions(s) {{jjid}}
      {% elif job_id is not none %}
        Job(s) {{jjid}}
      {% endif %}
