--- a/webservice/templates/confirm_kill_jobs.html
+++ b/webservice/templates/confirm_kill_jobs.html
@@ -33,9 +33,9 @@
 
    Are you sure you want to kill the jobs for 
      {% if campaign_id is not none %}
-        Campaign {{task.campaign_obj.name}}, task(s) {{jjil|join(', ')}}
+        Campaign {{task.campaign_obj.name}}, Submission(s) {{jjil|join(', ')}}
      {% elif task_id is not none %}
-       Task(s) {{jjil}}
+       Submissions(s) {{jjil}}
      {% elif job_id is not none %}
        Job(s) {{jjil}}
      {% endif %}
