--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -138,15 +138,17 @@ $( document ).ready(function() {
 
 
   <div class="ui">
+     <div class="ui segment raised floated left">
     <h3>Campaign</h3>
-
     <b>name</b>: {{campaign.name}}<br>
     <b>experiment</b>: {{campaign.experiment}}<br>
     <b>created</b>: {{campaign.created}}<br>
     <b>vo_role</b>: {{campaign.vo_role}}<br>
     <b>cs_split_type</b>: {{campaign.cs_split_type}}<br>
     <b>cs_split_dimensions</b>: {{campaign.cs_split_dimensions}}<br>
+    </div>
 
+     <div class="ui segment raised floated left">
     <h3>Campaign Definition</h3>
 
     <b>name</b>: {{taskdefinition.name}}<br>
@@ -154,7 +156,10 @@ $( document ).ready(function() {
     <b>created</b>: {{taskdefinition.created}}<br>
     <b>launch_script</b>: {{taskdefinition.launch_script}}<br>
     <b>definition_parameters</b>: {{taskdefinition.definition_parameters}}<br>
+    </div>
 
+    <div style="clear: both;">&nbsp;</div>
+     <div class="ui segment raised floated left">
     <h3>Tags</h3>
 
     <div class="ui search">
@@ -172,9 +177,6 @@ $( document ).ready(function() {
     </div>
 
 
-    <br/>
-    <br/>
-
     <div id="tag_container">
     {% for tag in tags %}
         <i class="trash outline icon link poms_tag" id="{{campaign.campaign_id}}_{{tag.tag_id}}"></i>
@@ -183,8 +185,56 @@ $( document ).ready(function() {
     {% endfor %}
     </div>
 
+    </div>
+    <div class="ui segment raised floated left">
+	 <h3>Actions</h3>
+	 <div class=menu>
+	  <div class=item>
+	   <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{campaign.campaign_id}}&tmax={{tmaxs}}"
+>
+	       <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram
+	   </a>
+	  </div>
+	  <div class=item>
+	   <a href="{{pomspath}}/campaign_sheet?campaign_id={{campaign.campaign_id}}&tmax={{tmaxs}}">
+	    <i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet
+	   </a>
+	  </div>
+	  <div class=item>
+	  <a href="{{pomspath}}/campaign_time_bars?campaign_id={{campaign.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}">
+	    <i class="external tasks icon" data-content="Submissions for Campaign Time Bars" data-variation="basic"></i>Submission Time Bars
+	  </a>
+	  </div>
+	  <div class=item>
+	  <a href="{{pomspath}}/inflight_files?campaign_id={{campaign.campaign_id}}">
+	    <i class="external plane icon" data-content="In-Flight File Information" data-variation="basic"></i>Inflight Files
+	  </a>
+	  </div>
+	  <div class=item>
+	  <a href="{{pomspath}}/actual_pending_files?count_or_list=c&campaign_id={{campaign.campaign_id}}">
+	    <i class="external spinner icon" data-content="Pending File Information" data-variation="basic"></i>Pending Files for Recent Jobs
+	  </a>
+	  </div>
+	  <div class=item>
+	  <a href="{{pomspath}}/schedule_launch?campaign_id={{campaign.campaign_id}}">
+	     <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches
+	  </a>
+	  </div>
+	  <div class=item>
+	    <a target="_blank" href="{{pomspath}}/campaign_task_files?campaign_id={{campaign.campaign_id}}"><i class="external file icon" data-content="List file statistics for Submissions for Campaign" data-variation="basic"></i>Campaign Submission Files</a>
+	  </div>
+	  <div class=item>
+	    <a target="_blank" href="{{pomspath}}/launch_jobs?campaign_id={{campaign.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
+	  </div>
+	  <div class=item>
+	    <a target="_blank" href="{{pomspath}}/kill_jobs?campaign_id={{campaign.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i>Kill Jobs for Campaign</a>
+	   </div>
+	  </div>
+	 </div>
+     </div>
 
-  </div>
+
+</div>
 
 
 
@@ -203,15 +253,15 @@ var querypath = protocol + "//" + hostname + "/" + appname + "/auto_complete_tag
 
 var experiment = "{{campaign.experiment}}";
 $('.ui.search')
-  .search({
-    apiSettings: {
-      url: querypath + "?q={query}&experiment=" + experiment
-    },
-    fields:{
-      title: 'tag_name'
-    },
-    //minCharacters : 3
-  });
+.search({
+apiSettings: {
+  url: querypath + "?q={query}&experiment=" + experiment
+},
+fields:{
+  title: 'tag_name'
+},
+//minCharacters : 3
+});
 </script>
 
 
