--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -49,14 +49,13 @@
 
    <table class="ui celled table unstackable">
      <tr>
-       <th colspan=3> Campaign 
+       <th colspan=2 align="center"> Campaign 
         <a target="_help" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Campaign"><i style="float: none" class="grey help circle link icon"></i></a>
       </th>
-      <th colspan=3>Active Jobs </th>
-      <th colspan=2>Jobs in {{time_range_string}}</th>
+      <th colspan=3 align="center">Active Jobs </th>
+      <th colspan=2 align="center">Jobs in {{time_range_string}}</th>
      </tr>
      <tr>
-        <th>Actions </th>
         <th>Experiment </th>
         <th>Name </th>
         <th>Idle 
@@ -81,60 +80,8 @@
 
      {% for c in cl %}
             <tr>
-            <td style="width: 6em">
-            <div class="ui left pointing dropdown icon button">
-             <i class="configure icon"></i>
-             <i class="dropdown icon"></i>
-             <div class=menu>
-              <div class=item>
-		<a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}"><i class="external info circle icon" data-content="Campaign Information" data-variation="basic"></i>Campaign Information</a>
-              </div>
-              <div class=item>
-               <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"
- >
-                   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram
-               </a>
-              </div>
-              <div class=item>
-               <a href="{{pomspath}}/campaign_sheet?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}">
-                <i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet
-               </a>
-              </div>
-              <div class=item>
-              <a href="{{pomspath}}/campaign_time_bars?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}">
-                <i class="external tasks icon" data-content="Submissions for Campaign Time Bars" data-variation="basic"></i>Submission Time Bars
-              </a>
-              </div>
-              <div class=item>
-	      <a href="{{pomspath}}/inflight_files?campaign_id={{c.campaign_id}}">
-                <i class="external plane icon" data-content="In-Flight File Information" data-variation="basic"></i>Inflight Files
-              </a>
-              </div>
-              <div class=item>
-	      <a href="{{pomspath}}/actual_pending_files?count_or_list=c&campaign_id={{c.campaign_id}}">
-                <i class="external spinner icon" data-content="Pending File Information" data-variation="basic"></i>Pending Files for Recent Jobs
-              </a>
-              </div>
-              <div class=item>
-		<a target="_blank" href="{{pomspath}}/campaign_task_files?campaign_id={{c.campaign_id}}"><i class="external file icon" data-content="List file statistics for Submissions for Campaign" data-variation="basic"></i>Campaign Submission Files</a>
-              </div>
-              <div class=item>
-		<a target="_blank" href="{{pomspath}}/launch_jobs?campaign_id={{c.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
-              </div>
-              <div class=item>
-		<a target="_blank" href="{{pomspath}}/kill_jobs?campaign_id={{c.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i>Kill Jobs for Campaign</a>
-               </div>
-              <div class=item>
-	      <a href="{{pomspath}}/schedule_launch?campaign_id={{c.campaign_id}}">
-                 <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches
-              </a>
-              </div>
-              </div>
-             </div>
-            </div>
-            </td>
             <td>{{c.experiment}}</td>
-            <td>{{c.name}}</td>
+            <td> <a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}">{{c.name}}</a></td>
             {% for k in counts_keys[c.campaign_id] %}
               {% if k %}
                 <td>
