--- a/webservice/templates/service_statuses.html
+++ b/webservice/templates/service_statuses.html
@@ -32,9 +32,9 @@
 
 {%block content%}
 <div class="ui segment raised">
-Job launches: {{launches}} 
- <a href="set_job_launches?hold=allowed"><button>Allow</button></a>
- <a href="set_job_launches?hold=hold"><button>Hold</button></a>
+Job launches: {{launches}}&nbsp;&nbsp; 
+ <a href="set_job_launches?hold=allowed"><button class="tiny ui left attached button"><i class="play icon"></i>Allow</button></a>
+ <a href="set_job_launches?hold=hold"><button class="tiny ui right attached button"><i class="stop icon"></i>Hold</button></a>
 </div>
 	   {{services}} 
 <h3> Key:</h3>
