--- a/webservice/templates/job_count_table.html
+++ b/webservice/templates/job_count_table.html
@@ -46,6 +46,7 @@
 <form action="failed_jobs_by_whatever" method="GET">
   <input type="hidden" name=tmin value="{{tmins}}">
   <input type="hidden" name=tmax value="{{tmaxs}}">
+  <input type="hidden" name=tdays value="{{tdays}}">
 
   <select name="f" class="ui selection dropdown" multiple="" id="multi-select">
     {% for c in possible_columns%}
