--- a/webservice/templates/job_histo.html
+++ b/webservice/templates/job_histo.html
@@ -41,10 +41,10 @@
            <div "postion: absolute; top: 0; left: 0; width:4em; text-align: right;">Eff.</div> 
            <div style="position: absolute; top:0; left: 4em;">Count</div>
        </div>
-     {% for row in vals %}
+     {% for row in range(10) %}
         <div class="row" style="width: 100%; height: 2em; position: relative;">
-           <div "postion: absolute; top: 0; left: 0; width:4em; text-align: right;">{{row.1|int}}x%</div> 
-           <a href="job_table?eff_d={{row.1}}&campaign_id={{campaign_id}}&tmax={{tmaxs}}&tdays={{tdays}}"><div style="position: absolute; top:0; left: 4em;  background: #808080; width:{{row.0}}0px;color: #ffffff;">{{row.0}}</div></a>
+           <div "postion: absolute; top: 0; left: 0; width:4em; text-align: right;">{{row|int}}0-{{row|int}}9%</div> 
+           <a href="job_table?eff_d={{row}}&campaign_id={{campaign_id}}&tmax={{tmaxs}}&tdays={{tdays}}"><div style="position: absolute; top:0; left: 4em;  background: #808080; width:{{vals.get(row,0)}}0px;color: #ffffff;">{{vals.get(row,0)}}</div></a>
        </div>
      {% endfor %}
      </div>
