--- a/webservice/templates/user_edit.html
+++ b/webservice/templates/user_edit.html
@@ -24,7 +24,7 @@
 
 {%block header%}
 <h1 class="ui header">
-    User Authorization
+    User Authorization{%include 'help_button.html'%}
 </h1>
 {%endblock%}
 
