sigh.. missed one

--- a/webservice/templates/list_task_logged_files.html
+++ b/webservice/templates/list_task_logged_files.html
@@ -11,7 +11,7 @@
   <div class="divider"> / </div>
   <div class="section"> <a href="{{pomspath}}/show_campaigns">Campaigns</a></div>
   <div class="divider"> / </div>
-  <div class="section"> <a href="{{pomspath}}/campaign_task_files">Campaign {{campaign.name}} File Info by Submission</a></div>
+  <div class="section"> <a href="{{pomspath}}/campaign_task_files?campaign_id={{campaign.campaign_id}}">Campaign {{campaign.name}} File Info by Submission</a></div>
   <div class="divider"> / </div>
   <div class="section"> <a href="{{pomspath}}/show_campaigns">Task {{jobsub_job_id}} Logged files</a></div>
 </div>	
