--- a/webservice/templates/show_dimension_files.html
+++ b/webservice/templates/show_dimension_files.html
@@ -1,7 +1,7 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>In-Flight files for Jobs</title>
+    <title>Files for dimension...</title>
 {%endblock%}
 
 {%block breadcrumbs%}
