--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -128,6 +128,9 @@
                 <a class="item" href="{{pomspath}}/show_campaigns">
                   Active
                 </a>
+                <a class="item" href="{{pomspath}}/show_campaigns?active=False">
+                  InActive
+                </a>
                 <a class="item" href="{{pomspath}}/campaign_edit">
                   Compose Campaign
                 </a>
